Fix some Customizer section tabs spacing issue

--- a/scss/customizer.scss
+++ b/scss/customizer.scss
@@ -375,10 +375,6 @@ $background-hover 	: #f5fcff;
 	}
 }
 
-.customize-section-description-container + .customize-control {
-	margin-bottom: 0;
-}
-
 #customize-controls .customize-info,
 #customize-controls .customize-section-title {
 	&.is-sticky.is-sticky {
